--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <!-- main container start -->
   <main class="main-wrapper">
-    <div class="container-fluid">
+    <div class="container">
       <div class="row">
         <div class="col-lg-8 col-12 col-md-12">
           <div class="product-list-head">
@@ -49,36 +49,18 @@
           </div>
           <div class="cart-items-box">
             <!-- cart item start -->
-            <div class="cart-item">
-              <div class="media">
-                <img src="https://cdn.pixabay.com/photo/2015/09/26/09/08/hipster-958805_640.jpg" alt="Thumbnail"
-                  class="img-fluid">
-                <div class="media-body">
-                  <h5>Product Name 01</h5>
-                  <h6>Price: $120</h6>
-                </div>
-              </div>
-              <div class="quantity">
-                <h5>Quantity</h5>
-                <h6><i class="fas fa-minus"></i> 3 <i class="fas fa-plus"></i></h6>
-              </div>
-              <div class="quantity">
-                <h5>Total Amount</h5>
-                <h6>3245</h6>
-              </div>
-              <div class="close-cart">
-                <a href="#"><i class="fas fa-close"></i></a>
-              </div>
+            <div id="cartProducts">
+
             </div>
             <!-- cart item end --> 
             <div class="cart-price-box"> 
               <div class="d-flex">
                 <h5>Total Amount:</h5>
                 <h5>$544</h5>
-              </div>
-              <div class="all-clear-bttn">
-                <a href="#">Clear Whole Cart</a>
-              </div>
+              </div> 
+            </div>
+            <div class="all-clear-bttn">
+              <a href="#" id="emptyAllCarts">Clear Whole Cart</a>
             </div>
           </div>
         </div>
@@ -89,9 +71,8 @@
 
   <!-- Bootstrap Bundle with Popper JS start -->
   <script src="assets/js/bootstrap.bundle.min.js"></script> 
-  <script src="./app.js" type="module"></script> 
-  
-  <!-- Bootstrap Bundle with Popper JS end -->
+  <script src="./index.js" type="module"></script> 
+ 
 
 </body>
 
