--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <link rel="stylesheet" href="assets/css/responsive.css">
   <!-- custom CSS end -->
 
-  <title>Home </title>
+  <title>Home - Assigment 4 Cart Application</title>
 </head>
 
 <body>
@@ -49,14 +49,14 @@
           </div>
           <div class="cart-items-box">
             <!-- cart item start -->
-            <div id="cartProducts">
-
-            </div>
+            <p id="showMessages" class="text-danger"></p>
+            <div id="cartProducts"> </div>
             <!-- cart item end --> 
-            <div class="cart-price-box"> 
+            <p id="emptyCartMessage" class="text-danger"></p>
+            <div class="cart-price-box">  
               <div class="d-flex">
                 <h5>Total Amount:</h5>
-                <h5>$544</h5>
+                <h5>$0</h5>
               </div> 
             </div>
             <div class="all-clear-bttn">
@@ -71,7 +71,7 @@
 
   <!-- Bootstrap Bundle with Popper JS start -->
   <script src="assets/js/bootstrap.bundle.min.js"></script> 
-  <script src="./index.js" type="module"></script> 
+  <script src="./app.js" type="module"></script> 
  
 
 </body>
